// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label Snapshots No Children 1`] = `
<label
  className="sc-AxjAm hjwNwx"
/>
`;

exports[`Label Snapshots No props 1`] = `
<label
  className="sc-AxjAm hjwNwx"
>
  This is a label
</label>
`;
